# log_visualizer

./: LICENSE  main.py  setup.cfg
src/visualizer/: logcounter.py  logvisualizer.py
