[metadata]
name = istream3-log-visualizer
version = 0.0.1
author = mkh
author_email = m.khomutov@list.ru
description = Calculates and visuzlizes log message frequency
long_description = file: README.md
license = MIT
platforms = any
url = https://github.com/m-khomutov/logvisualizer
classifiers =
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent

[options]
zip_safe = False
packages = visualizer
include_package_data = True
package-dir =
    =src
install_requires =
    matplotlib

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    is3log_visual = visualizer.logvisualizer:run
